# cf-cli

./: AGENTS.md  Cargo.toml  README.md  SKILLS.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/shared/: ensure_toolchain_installed.rs
crates/cli/src/: common.rs  lib.rs  main.rs
crates/cli/src/config/: app_config.rs  mod.rs
crates/cli/src/config/db/: mod.rs
crates/cli/src/config/modules/: add.rs  list.rs  mod.rs  remove.rs
crates/cli/src/deploy/: bundle.rs  docker.rs  mod.rs  template.rs
crates/cli/src/docs/: mod.rs
crates/cli/src/lint/: mod.rs
crates/cli/src/mod/: add.rs  init.rs
crates/cli/src/run/: mod.rs  run_loop.rs
crates/cli/src/setup/: init.rs  mod.rs  module.rs  tools.rs
crates/cli/src/tools/: mod.rs
crates/module-parser/: Cargo.toml
crates/module-parser/src/: config.rs  lib.rs  metadata.rs  module_rs.rs  source.rs  test_utils.rs
