[workspace]
members = ["crates/cli", "crates/module-parser"]
resolver = "3"

[workspace.package]
version = "0.0.1"
license-file = "LICENSE"
authors = ["CyberFabric"]
repository = "https://github.com/cyberfabric/cf-cli"
description = "Command-line interface for CyberFabric"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
module-parser = { path = "crates/module-parser" }

anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }

cargo-generate = { version = "0.23.8" }
cargo_metadata = { version = "0.23.1" }

dylint = "5.0.0"

serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { version = "0.0.23" }
serde_json = { version = "1.0" }

toml = { version = "1.1.2", features = ["serde"] }
toml_edit = "0.25.10"

notify = { version = "8.2", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
flate2 = { version = "1.1" }
tar = { version = "0.4" }
semver = { version = "1.0" }

syn = { version = "2.0.117", features = ["full"] }

prettyplease = { version = "0.2.37" }
proc-macro2 = { version = "1.0.106" }
tempfile = { version = "3.27.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
unwrap_used = "deny"
expect_used = "deny"

