[package]
name = "cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish = false
default-run = "cyberfabric"
autobins = false

[[bin]]
name = "cyberfabric"
path = "src/main.rs"

[[bin]]
name = "cargo-cyberfabric"
path = "src/cargo_main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cargo-generate = { workspace = true }

module-parser = { workspace = true }
notify = { workspace = true }

serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
module-parser = { workspace = true, features = ["test-utils"] }
