[package]
name = "module-parser"
version.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true

[features]
default = []
test-utils = ["dep:tempfile"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
